# project-OpenGL

./: CMakeLists.txt  README.md
include/glad/: glad.h
src/: glad.c  main.cpp
